// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expander by default matches existing snapshot 1`] = `
"<html><head></head><body><div class=\\"dm-expander \\" data-module=\\"dm-expander\\" data-open-on-load=\\"false\\">
    <h2 class=\\"dm-expander__heading\\">
      <span class=\\"dm-expander__title js-toggle\\">Default</span>
      <svg version=\\"1.1\\" viewBox=\\"0 0 1024 1024\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"dm-expander__icon dm-expander__icon--up\\" aria-hidden=\\"true\\" focusable=\\"false\\"><path d=\\"m798.16 609.84l-256-256c-16.683-16.683-43.691-16.683-60.331 0l-256 256c-16.683 16.683-16.683 43.691 0 60.331s43.691 16.683 60.331 0l225.84-225.84 225.84 225.84c16.683 16.683 43.691 16.683 60.331 0s16.683-43.691 0-60.331z\\"/></svg>
      <svg version=\\"1.1\\" viewBox=\\"0 0 1024 1024\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"dm-expander__icon dm-expander__icon--down\\" aria-hidden=\\"true\\" focusable=\\"false\\"><path d=\\"m225.84 414.16l256 256c16.683 16.683 43.691 16.683 60.331 0l256-256c16.683-16.683 16.683-43.691 0-60.331s-43.691-16.683-60.331 0l-225.84 225.84-225.84-225.84c-16.683-16.683-43.691-16.683-60.331 0s-16.683 43.691 0 60.331z\\"/></svg>
    </h2>
    <div class=\\"dm-expander__content js-content \\" id=\\"default\\">
      <div><p>Dummy content</p></div>
    </div>
  </div>
</body></html>"
`;

exports[`Expander when open on load matches existing snapshot 1`] = `
"<html><head></head><body><div class=\\"dm-expander \\" data-module=\\"dm-expander\\" data-open-on-load=\\"true\\">
    <h2 class=\\"dm-expander__heading\\">
      <span class=\\"dm-expander__title js-toggle\\">Expanded</span>
      <svg version=\\"1.1\\" viewBox=\\"0 0 1024 1024\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"dm-expander__icon dm-expander__icon--up\\" aria-hidden=\\"true\\" focusable=\\"false\\"><path d=\\"m798.16 609.84l-256-256c-16.683-16.683-43.691-16.683-60.331 0l-256 256c-16.683 16.683-16.683 43.691 0 60.331s43.691 16.683 60.331 0l225.84-225.84 225.84 225.84c16.683 16.683 43.691 16.683 60.331 0s16.683-43.691 0-60.331z\\"/></svg>
      <svg version=\\"1.1\\" viewBox=\\"0 0 1024 1024\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"dm-expander__icon dm-expander__icon--down\\" aria-hidden=\\"true\\" focusable=\\"false\\"><path d=\\"m225.84 414.16l256 256c16.683 16.683 43.691 16.683 60.331 0l256-256c16.683-16.683 16.683-43.691 0-60.331s-43.691-16.683-60.331 0l-225.84 225.84-225.84-225.84c-16.683-16.683-43.691-16.683-60.331 0s-16.683 43.691 0 60.331z\\"/></svg>
    </h2>
    <div class=\\"dm-expander__content js-content dm-expander__content--visible\\" id=\\"expanded\\">
      <div><p>Dummy content</p></div>
    </div>
  </div>
</body></html>"
`;

exports[`Expander when open on load matches existing snapshot 2`] = `
"<html><head></head><body><div class=\\"dm-expander \\" data-module=\\"dm-expander\\" data-open-on-load=\\"true\\">
    <h2 class=\\"dm-expander__heading\\">
      <span class=\\"dm-expander__title js-toggle\\">Selected</span>
      <svg version=\\"1.1\\" viewBox=\\"0 0 1024 1024\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"dm-expander__icon dm-expander__icon--up\\" aria-hidden=\\"true\\" focusable=\\"false\\"><path d=\\"m798.16 609.84l-256-256c-16.683-16.683-43.691-16.683-60.331 0l-256 256c-16.683 16.683-16.683 43.691 0 60.331s43.691 16.683 60.331 0l225.84-225.84 225.84 225.84c16.683 16.683 43.691 16.683 60.331 0s16.683-43.691 0-60.331z\\"/></svg>
      <svg version=\\"1.1\\" viewBox=\\"0 0 1024 1024\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"dm-expander__icon dm-expander__icon--down\\" aria-hidden=\\"true\\" focusable=\\"false\\"><path d=\\"m225.84 414.16l256 256c16.683 16.683 43.691 16.683 60.331 0l256-256c16.683-16.683 16.683-43.691 0-60.331s-43.691-16.683-60.331 0l-225.84 225.84-225.84-225.84c-16.683-16.683-43.691-16.683-60.331 0s-16.683 43.691 0 60.331z\\"/></svg>
<div class=\\"dm-expander__selected-counter\\">1 selected</div>    </h2>
    <div class=\\"dm-expander__content js-content dm-expander__content--visible\\" id=\\"selected\\">
      <div><p>Dummy content</p></div>
    </div>
  </div>
</body></html>"
`;
